# plant-disease-detection

./: .gitignore  MOCK_UI_README.md  PLANTVILLAGE_SETUP.md  README.md  pyproject.toml  requirements.txt  run_app.py  run_tests.py  test_model.py  test_new_features.py
.cursor/rules/: api-integration.md  database-schema.md  localization.md  ml-disease-detection.md  plant-disease-detection.mdc  project-standards.md  streamlit-components.md  streamlit-deployment.md
docs/: PRD.md  README.md  WEATHER_API_GUIDE.md
notebooks/: 01_explore_dataset.ipynb
outputs/: training_results.json
scripts/: download_plantvillage.py  setup.sh
src/: train.py
src/data/: __init__.py  dataset.py  preprocessing.py  utils.py
src/models/: __init__.py  cnn_model.py  disease_classifier.py
src/streamlit_app/: __init__.py  app.py  components.py  market_service.py  mock_data.py  translations.py  weather_service.py
tests/: test_data.py  test_model.py  test_models.py  test_new_features.py
